remove padding on mobile and fix alignment

--- a/css/style.css
+++ b/css/style.css
@@ -46,36 +46,19 @@ code {
 #experience,
 #activities {
   padding-bottom: 1em;
+}
+
+.line {
   border-bottom: 1px solid #aaaaaa;
 }
+
 #projects {
   padding-bottom: 1em;
 }
-@media (max-width: 992px){
-  #projects {
-    border-bottom: 1px solid #aaaaaa;
-  }
-  #other {
-    border-bottom: none;
-  }
-}
-
-@media (max-width: 992px) and (min-width: 768px) {
-  #contact ul {
-    column-count: 2!important;
-    -webkit-column-count: 2!important;
-    -moz-column-count: 2!important;
-  }
-}
-
 #content {
   border-bottom: 1px solid #aaaaaa;
 }
-#education,
-#experience,
-#projects {
-  padding-right: 1em;
-}
+
 #header {
   border-bottom: 1px solid #aaaaaa;
 }
@@ -93,17 +76,12 @@ a[href]:after {
   padding: 0;
 }
 
-@media screen and (min-width: 992px) {
-  #content-left {
-    border-right: 1px solid #aaaaaa;
-  }
-}
 #page {
-  padding: 0em 5em 5em 5em;
+  padding: 0em 1em 5em 1em;
   background-color: #fff;
   max-width: 960px;
 }
-@media screen and (min-width: 768px) {
+@media (min-width: 768px) {
   #page {
     padding: 5em;
     margin-top: 3em;
@@ -113,5 +91,26 @@ a[href]:after {
   #header h1 {
     text-align: right;
     font-size: 48pt;
+  }
+}
+@media (min-width: 992px) {
+  #projects-line {
+    border-bottom: none;
+  }
+  #content-left {
+    border-right: 1px solid #aaaaaa;
+  }
+}
+@media (max-width: 992px){
+  #other-line {
+    border-bottom: none;
+  }
+}
+
+@media (max-width: 992px) and (min-width: 768px) {
+  #contact ul {
+    column-count: 2!important;
+    -webkit-column-count: 2!important;
+    -moz-column-count: 2!important;
   }
 }
